# bicepDeployment

./: .gitignore  CLAUDE.md  README.md  _helpers.ps1  bicepDeployment.code-workspace  deploy.ps1  deploy.ps1-old  deploy.py  init.ps1  launch_gui.py  pyproject.toml  requirements.txt  setup.ps1  tmpclaude-72b8-cwd
.backup/: 02.2-BottomlineOrderProposal.bicep.backup  02.2-BottomlineOrderProposal.bicep.final  02.3-BottomlineOrderStatus.bicep.backup  02.3-BottomlineOrderStatus.bicep.corrected  02.4-BottomlineOrderShipment.bicep.backup  02.4-BottomlineOrderShipment.bicep.corrected
.claude/: 02.2-BottomlineOrderProposal.bicep.corrected  02.2-BottomlineOrderProposal.bicep.fixed  03.0-AccellaHandler.bicep.bak  04.1-BottomlineOrder-fixed.bicep  bottomline-connection-fixes-summary.md  bottomline-order-test-summary.md  deploy-all-with-logging.ps1  proposal-actions.json  run-full-deploy.ps1  settings.local.json  test-managed-identity-deployment.ps1  test-storage-template.ps1
.tests/: helpers.Tests.ps1  setup.Tests.ps1
WPF/: AzureClient.ps1  BicepManager.ps1  ConfigManager.ps1  UI-ConfigDialog.ps1  UI-Dialogs.ps1  UI-MainWindow.ps1  wpfDeploy.ps1
WPF Version/: deploy.ps1
WPF Version/Modules/: UI-ConfigDialog.ps1  UI-Dialogs.ps1  UI-MainWindow.ps1  (+2 more)
deployScript/: __init__.py  azure_client.py  bicep_manager.py  config.py  deployment.py  exporter.py  header_generator.py  logger.py  main.py  menu.py  workflow_mappings.py
gui/: app.py  main_window.py
templates/: parameters.template.json
tests/: test_exporter.py  test_header_generator.py  test_workflow_mappings.py
(+20 files in other folders)
